assets/style.scss
---
# Empty front matter
---

@mixin medium {
	@media screen and (min-width: 23rem) { @content }
}

@mixin large {
	@media screen and (min-width: 50rem) { @content }
}

$monospace-font-stack: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;

$background: #fff;
$foreground: #000;
$highlight: #0066cc;

// $background: purple;
// $foreground: lavender;
// $highlight: #0066cc;

* { box-sizing: border-box; }

::selection {
	background: rgba($foreground,0.3);
}

html, body {
	min-height: 100%;
	font: 12pt/1em sans-serif;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	color: $foreground;
}

pre {
	overflow-x: auto;
	overflow-y: visible;
	margin-bottom: 1.4rem;
}

pre, code {
	font-family: $monospace-font-stack;
}

mark {
	background: rgba(yellow, 0.6);
}

a:link {
	color: $highlight;
}

.subtle-link {
	&, &:link {
		color: $foreground;
		text-decoration: none;
	}

	&:hover {
		text-decoration: underline;
	}
}

.sr-skip {
	position:absolute; 
	left:-10000px; 
	top:auto; 
	width:1px; 
	height:1px; 
	overflow:hidden;
	background: $foreground;
	z-index: 10;
	padding: 1rem;

	&, &:link {
		color: $background;
	}

	&:focus {
		position:fixed; 
		top: 0;
		left: 0;
		width:auto;
		height:auto;
	}
}

.page {
	width: 100%;
	max-width: 2000px;
	min-height: 100%;
	display: flex;
	flex-direction: column;
	background: $background;
	z-index: 1;
}

.page-header {
	min-width: 6rem;
	flex: 0;
}

.page-header-content, .page-main {
	padding: 1rem 1rem 0;
}

.page-main {
	flex: auto;
	margin-bottom: 1rem;
}

.main-logo-link, .main-logo {
	display: block;
}

.main-logo-link {
	margin: 0 0 1.5rem;
}

.main-logo {
	width: 4rem;
	path {
		fill: $foreground;
	}
}

.nav-list {
	list-style: none;
	display: block;
	margin: 0;
	padding: 0 0 0 0.2rem;
}

.nav-list li {
	display: block;
	text-transform: uppercase;
	margin: 0 0 1rem;
	user-select: none;
	cursor: default;
}

@include medium {
	body {
		font-size: 1.1em;
	}
	.main-logo {
		width: 6rem;
	}
	.page-header-content, .page-main {
		padding: 1.6rem 1.6rem 0;
	}
	.page-main {
		flex: auto;
		padding-top: 1rem;
		margin-bottom: 1.6rem;
	}
}

@include large {
	.page {
		flex-direction: row;
	}
	.page-header {
		flex: 0 0 20%;
		margin-right: 1.6rem;
	}
	.page-header-content {
		padding: 2.6rem 0 0 2.6rem;
		position: fixed;
		top: 0;
	}
	.page-main {
		padding: 2.6rem 1.6rem 0 0;
	}
}

@import "content";
@import "highlight";
@import "language-names";

